[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json_runner"
version = "0.0.0"
description = "Run JSON as a programming language"
readme = "README.md"
authors = [{ name = "dragoncoder047", email = "101021094+dragoncoder047@users.noreply.github.com" }]
license = { file = "LICENSE" }
classifiers = []
dependencies = ["regex==2023.10.3"]
requires-python = ">=3.10"
